Fixed alignment of profile image

--- a/css/sections/about.css
+++ b/css/sections/about.css
@@ -147,6 +147,7 @@
     .bio-content {
         flex-direction: column;
         text-align: center;
+        align-items: center;
     }
 
     .bio-content .profile img {
